syntax = "proto3";

message close_request {
  string message = 1;
}